@@ -1,44 +1,0 @@
-/*
- * Cantata
- *
- * Copyright (c) 2011-2014 Craig Drummond <craig.p.drummond@gmail.com>
- *
- * ----
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; see the file COPYING.  If not, write to
- * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
- * Boston, MA 02110-1301, USA.
- */
-
-#include "toolbar.h"
-#include <QStyleOption>
-#include <QStyle>
-#include <QPainter>
-
-ToolBar::ToolBar(QWidget *parent)
-    : QWidget(parent)
-{
-    //setStyleSheet("ToolBar{ background-color : qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #3c3b37, stop: 1 #474641); }");
-}
-
-void ToolBar::paintEvent(QPaintEvent *e)
-{
-    QWidget::paintEvent(e);
-    QStyleOption opt;
-    opt.init(this);
-    QPainter p(this);
-    style()->drawPrimitive(QStyle::PE_Widget, &opt, &p, this);
-}
-
-
